# adpulse

./: .gitignore  DEEP_RESEARCH.md  Dockerfile  README.md  register.py
backend/: analyzer.py  clustering.py  llm.py  main.py  predictor.py  rag_agent.py  requirements.txt
frontend/: pyproject.toml  requirements.txt  vercel.json
frontend/.vercel/: project.json
frontend/api/: analyze.py  clustering.py  index.py  landing.py  predictor.py
frontend/app/: page.tsx
frontend/app/api/analyze/: route.ts
frontend/app/api/health/: route.ts
frontend/app/api/landing/: route.ts
frontend/components/: CsvAnalyzer.tsx  DiagnosticCTA.tsx  LandingAnalyzer.tsx
frontend/knowledge/: ad_copy_best_practices.md
frontend/lib/: landing.py  llm.py  predictor.py  rag_agent.py
frontend/model_artifacts/: cvr_predictor.pkl  scaler.pkl  tfidf.pkl
frontend/sample_data/: sample_ad_account.csv
model_artifacts/: feature_meta.json  tfidf.pkl
