[project]
name = "adpulse-frontend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pandas>=2.2.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "beautifulsoup4>=4.12.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
]

[tool.vercel]
entrypoint = "api.index:app"
